# fragmentshot

./: .gitignore  LICENSE  README.md  pyproject.toml
fragmentshot/: __init__.py  retriever.py
tests/: test_retriever.py
