[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fragmentshot"
version = "2.0.0"
description = "Fragment-based retrieval for MT prompting with SQLite indexing, exact-first lookup, and masked fallback."
authors = [{ name = "Samuel Frontull", email = "samuel.frontull@uibk.ac.at" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = "CC-BY-SA-4.0"
keywords = ["machine-translation", "retrieval", "rag", "few-shot", "icl", "prompting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
  "License :: OSI Approved :: Creative Commons Attribution-ShareAlike 4.0 International License (CC-BY-SA-4.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/schtailmuel/fragmentshot"
Repository = "https://github.com/schtailmuel/fragmentshot"
Issues = "https://github.com/schtailmuel/fragmentshot/issues"

[project.scripts]
fragmentshot = "fragmentshot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.5",
]

[tool.setuptools]
license-files = ["LICENSE"]